# ar_demo

./: CMakeLists.txt  Doxyfile  README.md
launch/: 3dm_bag.launch  interactive_markers.launch
resources/: chair.mtl
src/: ARDataManager.cpp  ARDataManager.h  ARDataNode.cpp  ARDataNode.h  MeshObject.cpp  MeshObject.h  PinholeCamera.cpp  PinholeCamera.h  SceneRenderer.cpp  SceneRenderer.h  ar_demo_node.cpp  ar_demo_node2.cpp  ar_demo_node3.cpp  interactive_marker_server.cpp
src/unit_tests/: estimate.pcd  estimate_ground_plane.cpp
src/utils/: EstimationFromPointClouds.cpp  EstimationFromPointClouds.h  MiscUtils.h  PoseManipUtils.cpp
